// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssuesTableTest automated checks disabled 1`] = `
<div
  className="issues-table"
>
  <h1>
    test title
  </h1>
  <div
    className="issues-table-content"
  >
    <div
      className="details-view-command-bar"
    >
      <VisualizationToggle
        checked={false}
        className="automated-checks-details-view-toggle"
        disabled={false}
        label="Show failures"
        onClick={[Function]}
        visualizationName="Automated checks"
      />
    </div>
    <div
      className="details-disabled-message"
      role="alert"
    >
      Turn on 
      <Term>
        Automated checks
      </Term>
       to see a list of failures.
    </div>
  </div>
</div>
`;

exports[`IssuesTableTest includes subtitle if specified 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <div className=\\"issues-table-subtitle\\">
    test subtitle text
  </div>
  <StyledSpinnerBase className=\\"details-view-spinner\\" size={3} label=\\"Loading...\\" />
</div>"
`;

exports[`IssuesTableTest spinner for scanning state 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <div className=\\"issues-table-content\\">
    <div className=\\"details-view-command-bar\\">
      <VisualizationToggle label=\\"Show failures\\" checked={true} disabled={true} onClick={[Function: proxy]} className=\\"automated-checks-details-view-toggle\\" visualizationName=\\"Automated checks\\" />
    </div>
    <StyledSpinnerBase className=\\"details-view-spinner\\" size={3} label=\\"Scanning...\\" />
  </div>
</div>"
`;

exports[`IssuesTableTest spinner, issuesEnabled == null 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <StyledSpinnerBase className=\\"details-view-spinner\\" size={3} label=\\"Loading...\\" />
</div>"
`;

exports[`IssuesTableTest spinner, issuesEnabled is an empty object 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <div className=\\"issues-table-content\\">
    <div className=\\"details-view-command-bar\\">
      <VisualizationToggle label=\\"Show failures\\" checked={{...}} disabled={false} onClick={[undefined]} className=\\"automated-checks-details-view-toggle\\" visualizationName=\\"Automated checks\\" />
      <ReportExportComponent deps={{...}} scanDate={{...}} reportGenerator={[Function: function () {
                          var args = [];
                          for (var _i = 0; _i < arguments.length; _i++) {
                              args[_i] = arguments[_i];
                          }
                          _this._interceptor.removeInvocation(invocation_1);
                          var method = new MethodInfo(target, p);
                          var methodInvocation = new MethodInvocation(target, method, args, ProxyType.DYNAMIC);
                          _this._interceptor.intercept(methodInvocation);
                          return methodInvocation.returnValue;
                      }]} pageTitle=\\"pageTitle\\" exportResultsType=\\"AutomatedChecks\\" htmlGenerator={[Function: bound ]} />
    </div>
    <StyledSpinnerBase className=\\"details-view-spinner\\" size={3} label=\\"Loading data...\\" />
  </div>
</div>"
`;

exports[`IssuesTableTest table with 0 issues 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <div className=\\"issues-table-content\\">
    <div className=\\"details-view-command-bar\\">
      <VisualizationToggle label=\\"Show failures\\" checked={true} disabled={false} onClick={[Function: proxy]} className=\\"automated-checks-details-view-toggle\\" visualizationName=\\"Automated checks\\" />
      <ReportExportComponent deps={{...}} scanDate={{...}} reportGenerator={[Function: function () {
                          var args = [];
                          for (var _i = 0; _i < arguments.length; _i++) {
                              args[_i] = arguments[_i];
                          }
                          _this._interceptor.removeInvocation(invocation_1);
                          var method = new MethodInfo(target, p);
                          var methodInvocation = new MethodInvocation(target, method, args, ProxyType.DYNAMIC);
                          _this._interceptor.intercept(methodInvocation);
                          return methodInvocation.returnValue;
                      }]} pageTitle=\\"pageTitle\\" exportResultsType=\\"AutomatedChecks\\" htmlGenerator={[Function: bound ]} />
    </div>
    <div className=\\"issues-table-details\\">
      <IssuesDetailsList violations={{...}} issuesTableHandler={{...}} issuesSelection={{...}} />
      <div className=\\"issue-detail-outer-container ms-Fabric\\">
        <IssuesDetailsPane deps={{...}} selectedIdToRuleResultMap={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" featureFlagData={{...}} userConfigurationStoreData={{...}} />
      </div>
    </div>
  </div>
</div>"
`;

exports[`IssuesTableTest table with 1 issues 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <div className=\\"issues-table-content\\">
    <div className=\\"details-view-command-bar\\">
      <VisualizationToggle label=\\"Show failures\\" checked={true} disabled={false} onClick={[Function: proxy]} className=\\"automated-checks-details-view-toggle\\" visualizationName=\\"Automated checks\\" />
      <ReportExportComponent deps={{...}} scanDate={{...}} reportGenerator={[Function: function () {
                          var args = [];
                          for (var _i = 0; _i < arguments.length; _i++) {
                              args[_i] = arguments[_i];
                          }
                          _this._interceptor.removeInvocation(invocation_1);
                          var method = new MethodInfo(target, p);
                          var methodInvocation = new MethodInvocation(target, method, args, ProxyType.DYNAMIC);
                          _this._interceptor.intercept(methodInvocation);
                          return methodInvocation.returnValue;
                      }]} pageTitle=\\"pageTitle\\" exportResultsType=\\"AutomatedChecks\\" htmlGenerator={[Function: bound ]} />
    </div>
    <div className=\\"issues-table-details\\">
      <IssuesDetailsList violations={{...}} issuesTableHandler={{...}} issuesSelection={{...}} />
      <div className=\\"issue-detail-outer-container ms-Fabric\\">
        <IssuesDetailsPane deps={{...}} selectedIdToRuleResultMap={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" featureFlagData={{...}} userConfigurationStoreData={{...}} />
      </div>
    </div>
  </div>
</div>"
`;

exports[`IssuesTableTest table with 2 issues 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <div className=\\"issues-table-content\\">
    <div className=\\"details-view-command-bar\\">
      <VisualizationToggle label=\\"Show failures\\" checked={true} disabled={false} onClick={[Function: proxy]} className=\\"automated-checks-details-view-toggle\\" visualizationName=\\"Automated checks\\" />
      <ReportExportComponent deps={{...}} scanDate={{...}} reportGenerator={[Function: function () {
                          var args = [];
                          for (var _i = 0; _i < arguments.length; _i++) {
                              args[_i] = arguments[_i];
                          }
                          _this._interceptor.removeInvocation(invocation_1);
                          var method = new MethodInfo(target, p);
                          var methodInvocation = new MethodInvocation(target, method, args, ProxyType.DYNAMIC);
                          _this._interceptor.intercept(methodInvocation);
                          return methodInvocation.returnValue;
                      }]} pageTitle=\\"pageTitle\\" exportResultsType=\\"AutomatedChecks\\" htmlGenerator={[Function: bound ]} />
    </div>
    <div className=\\"issues-table-details\\">
      <IssuesDetailsList violations={{...}} issuesTableHandler={{...}} issuesSelection={{...}} />
      <div className=\\"issue-detail-outer-container ms-Fabric\\">
        <IssuesDetailsPane deps={{...}} selectedIdToRuleResultMap={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" featureFlagData={{...}} userConfigurationStoreData={{...}} />
      </div>
    </div>
  </div>
</div>"
`;
